[package]
edition = "2021"
name = "farm_plugin_recooler"
version = "0.0.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
farmfe_core = { version = "0.7.0" }
farmfe_toolkit_plugin_types = { version = "0.0.21" }
farmfe_macro_plugin = { version = "0.0.4" }
farmfe_toolkit = "0.0.14"
farmfe_compiler = "0.0.12"                           # remove after farm v2
farmfe_plugin_minify = "0.0.12"                      # remove after farm v2
serde = { version = "1.0", features = ["derive"] }
walkdir = "2.5.0"
const_format = "0.2.33"
radix_fmt = "1.0.0"
urlencoding = "2.1.3"
lazy_static = "1.5.0"
regex = "1.10.2"
